# Blake3

./: CMakeLists.txt  README.md  library.json
src/: BLAKE3.cpp  BLAKE3.h
